fix[MovieInfo]: adjust row-gap for mobile view

--- a/src/entities/movie/ui/movie-info/MovieInfo.module.scss
+++ b/src/entities/movie/ui/movie-info/MovieInfo.module.scss
@@ -12,6 +12,10 @@
     display: flex;
     flex-direction: column;
     row-gap: 24px;
+
+    @include m.mobile {
+      row-gap: 12px;
+    }
   }
 
   &__property {
